refactor Appointment to stop returning the entity and return the DTOs